<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group8.tcss450.uw.edu.consearch.activities.HomeActivity">

    <RadioGroup
        android:id="@+id/search_radio_group"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/artist_search_radio_button"
            android:text="@string/artist_radio"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/venue_search_radio_button"
            android:text="@string/venue_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/location_search_radio_button"
            android:text="@string/location_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/home_search_textView"
            android:text="@string/search_textView"
            android:textColor="@color/text_color_black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/home_search_editText"
            android:hint="@string/search_hint"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="text"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/home_search_button"
            android:text="@string/search_button"
            android:textAlignment="center"
            android:background="@color/search_button_background"
            android:textColor="@color/text_color_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="homeSearchButtonClick"/>

    </LinearLayout>

</LinearLayout>
