<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/guitar">

        <LinearLayout
            android:id="@+id/activity_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="group8.tcss450.uw.edu.consearchsafe.RegisterActivity">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerTitle"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/registerText"
                android:textColor="@color/textColor"
                android:text="@string/usernameTitle"/>
            <EditText
                android:id="@+id/usernameRegister"
                android:layout_width="@dimen/loginGroup"
                android:layout_height="wrap_content"
                android:textSize="@dimen/registerText"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:background="@drawable/customborder" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/registerText"
                android:textColor="@color/textColor"
                android:text="@string/passwordTitle"/>
            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="@dimen/loginGroup"
                android:layout_height="wrap_content"
                android:textSize="@dimen/registerText"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:background="@drawable/customborder" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/registerText"
                android:textColor="@color/textColor"
                android:text="@string/passwordConfirmTitle"/>
            <EditText
                android:id="@+id/passwordConfirm"
                android:layout_width="@dimen/loginGroup"
                android:layout_height="wrap_content"
                android:textSize="@dimen/registerText"
                android:inputType="textPassword"
                android:layout_marginBottom="15dp"
                android:background="@drawable/customborder"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickRegister"
                android:text="@string/register"/>

        </LinearLayout>

</ScrollView>