<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="group8.tcss450.uw.edu.consearch.fragments.eventFragments.EventResultsFragment">



    <TextView
        android:id="@+id/event_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name_placeholder"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:typeface="serif"
        android:textStyle="italic|bold"
        android:textColor="@color/textColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/results_details"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:typeface="serif"
        android:textStyle="italic|bold"
        android:textColor="@color/textColor"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/venue_name_lead_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/event_venue_lead"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:typeface="serif"
            android:textStyle="italic|bold"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/venue_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:textSize="12sp"
            android:typeface="serif"
            android:textStyle="italic|bold"
            android:textColor="@color/textColor"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_alignBaseline="@+id/venue_name_lead_textView"
            android:layout_alignBottom="@+id/venue_name_lead_textView"
            android:layout_toRightOf="@+id/venue_name_lead_textView"
            android:layout_toEndOf="@+id/venue_name_lead_textView" />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="12sp"
        android:typeface="serif"
        android:textStyle="italic|bold"
        android:text="@string/event_website_lead"
        android:textColor="@color/text_color_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/event_website_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="12sp"
        android:typeface="serif"
        android:autoLink="web"
        android:textColorLink="@color/hyperlink_blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_artist_list"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="12sp"
        android:typeface="serif"
        android:textStyle="italic|bold"
        android:textColor="@color/textColor"/>

    <ListView
        android:id="@+id/event_artist_list"
        android:listSelector="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
